# spline_intersections

./: README.md  plot.py  pyproject.toml
examples/: post_plots.py
splineintersections/: splines.py
src/spline_intersections/: __init__.py  splines.py
