[project]
name = "spline_intersections"
version = "0.1.0"
description = "3D spline intersections"
readme = "README.md"
authors = [
    { name = "Albert Johannessen", email = "albert.johannessen@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "seaborn>=0.13.2",
]

[project.scripts]
spline_intersections = "spline_intersections:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
